# DoomClone

./: .gitignore  BOSSA1_ANIMATION_FIX.md  BOSSA1_walk_template.h  CMakeLists.txt  CONSOLE_README.md  DoomClone.aps  DoomClone.sln  DoomClone.slnx  DoomClone.vcxproj  DoomClone.vcxproj.filters  DoomTest.c  OPENAL_SETUP.md  Oracular_map_editor.c  README.md  TEXTURES_README.md  aa.py  automap.c  automap.h  build_package.bat  console.c  console.h  console_font.c  console_font.h  data_types.h  effects.h  enemy.h  fps_counter.c  fps_counter.h  gates.h  glass.h  hud.c  hud.h  level copy.h  level.h  level_stair_test.h  lighting.c  lighting.h  my_array.txt  pickups.h  projectile.h  (+8 more)
OracularMap/: OracularMap.vcxproj  OracularMap.vcxproj.filters  Oracular_map_editor.c  level.h
TextureEditor/: INTEGRATION_NOTES.txt  fixes_applied.txt
Texture_Editor/: Texture_Editor.vcxproj  Texture_Editor.vcxproj.filters  stb_image.h  texture_editor.c  texture_editor.c.backup  texture_export.h
doom_clone/: New Section 1.one  Open Notebook.onetoc2
textures/: BOSSA1.h  BOSSA1_DIE.h  BOSSA1_attack.h  BOSSA1_proj.h  BOSSA1_walk.h  BOSSA1_walk_new.h  BOSSA2_DIE.h  BOSSA2_attack.h  BOSSA2_walk.h  BOSSA3_DIE.h  BOSSA3_attack.h  BOSSA3_walk.h  FACE_CYCLE1.h  Pl_cycle1.h  Pl_cycle2.h  Pl_cycle3.h  Pl_cycle4.h  Pl_cycle5.h  README.md  TEXTURE_TEMPLATE.h  T_00.h  T_01.h  T_02.h  T_05.h  T_06.h  WALL57_1.h  WALL57_2.h  WALL57_3.h  WALL57_4.h  WALL57_anim.h  WALL58.h  all_textures.h  armour.h  bg.piskel  bl_key.h  cace_attack.h  cace_die.h  cace_fire.h  cace_stat.h  floor1.h  (+23 more)
tools/: convert_texture.py  (+6 more)
(+14 files in other folders)
